<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/bomber"
            android:textAlignment="center"
            android:textFontWeight="800"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/bomber_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/bomber_message"
            android:inputType="text" />

        <EditText
            android:id="@+id/bomber_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/bomber_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/bomber_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/bomber_count"
            android:inputType="text" />

        <Button
            android:id="@+id/bomber_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="140dp"
            android:drawableLeft="@drawable/send_email"
            android:drawablePadding="15dp"
            android:text="@string/bomber_send" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/autoreply_title"
            android:textAlignment="center"
            android:textFontWeight="800"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/message_receive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/autoreply_message"
            android:inputType="text" />

        <EditText
            android:id="@+id/message_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/autoreply_answer"
            android:inputType="text" />

        <Button
            android:id="@+id/add_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:drawableLeft="@drawable/add"
            android:drawablePadding="15dp"
            android:text="@string/autoreply_save" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/save_answer_list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
